Updated index.html. Added reference to sub sound.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
       </div>
     </div>
       <div id='footer'> 
-        <h3>Licensing</h3>
+        <h3>Sources</h3>
         <p>All audio is taken from <a href="freesound.org">FreeSound.org</a></p>
-        <p>Music taken from the YouTube library.</p>
+        <p>Backgorund music taken from the <a href="https://youtu.be/fewLXi6GATM">YouTube library</a>.</p>
+        <p>Alert sound clipped from <a href="https://www.youtube.com/watch?v=sMLaNqzif5c">Paramore's Brick by Boring Brick (Muffin Remix)</a></p>
         <p><a href="https://github.com/p4nash/pet-the-finn">Source code</a></p>
       </div>
     </div>
