--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </div>
       <div id='footer'> 
         <h3>Sources</h3>
+        <p>Monitor 3D model taken from <a href="https://www.cgtrader.com/free-3d-models/electronics/computer/monitor-curved">CGTrader.com</a></p>
         <p>All audio is taken from <a href="freesound.org">FreeSound.org</a></p>
         <p>Backgorund music taken from the <a href="https://youtu.be/fewLXi6GATM">YouTube library</a>.</p>
         <p>Alert sound clipped from <a href="https://www.youtube.com/watch?v=sMLaNqzif5c">Paramore's Brick by Boring Brick (Muffin Remix)</a></p>
