--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               In good ol' fashioned Siege manner, the hitboxes on this are broken as well and I refuse to fix them.
             </li>
             <li>
+              Sound cues are important. Unlike Siege, the sound in this works and you'll hear which side enemies come from.
+            </li>
+            <li>
               When Finn spawns, it lowers your sensitivity cause he's build like a tater tot and is sitting on your lap.
             </li>
             <li>
